test: Task file fixed